<?xml version="1.0" encoding="utf-8"?>
<com.duoyue.lib.base.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                          xmlns:app="http://schemas.android.com/apk/res-auto"
                                          android:layout_width="match_parent"
                                          android:layout_height="wrap_content"
                                          android:orientation="vertical"
>

    <com.duoyue.lib.base.widget.XLinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/entrances_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/entrances_rank"
                android:gravity="center_horizontal"
                android:text="@string/entrances_rank"
                android:textColor="@color/standard_text_color_gray"
                android:textSize="@dimen/standard_text_size_medium"/>

        <TextView
                android:id="@+id/entrances_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/entrances_choose"
                android:gravity="center_horizontal"
                android:text="@string/entrances_select"
                android:textColor="@color/standard_text_color_gray"
                android:textSize="@dimen/standard_text_size_medium"/>

        <TextView
                android:id="@+id/entrances_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/entrances_new"
                android:gravity="center_horizontal"
                android:text="@string/entrances_new"
                android:textColor="@color/standard_text_color_gray"
                android:textSize="@dimen/standard_text_size_medium"/>

        <TextView
                android:id="@+id/entrances_complete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/entrances_complete"
                android:gravity="center_horizontal"
                android:text="@string/entrances_complete"
                android:textColor="@color/standard_text_color_gray"
                android:textSize="@dimen/standard_text_size_medium"/>

        <TextView
                android:id="@+id/entrances_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/entrances_category"
                android:gravity="center_horizontal"
                android:text="@string/entrances_category"
                android:textColor="@color/standard_text_color_gray"
                android:textSize="@dimen/standard_text_size_medium"/>

    </com.duoyue.lib.base.widget.XLinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:x_layout_size="#,2"
            android:background="@color/standard_div_line_color"/>
</com.duoyue.lib.base.widget.XLinearLayout>