<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/not_end_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/not_end"
                android:textColor="@color/standard_black_fourth_level_color_c6"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/please_wait_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/not_end_tv"
                android:layout_centerHorizontal="true"
                android:text="@string/please_wait_update"
                android:textColor="@color/standard_black_fourth_level_color_c6"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/finished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/finished"
                android:textColor="@color/standard_black_fourth_level_color_c6"
                android:textSize="28dp" />
        </RelativeLayout>

        <LinearLayout
            android:background="@color/standard_black_second_level_color_c4"
            android:id="@+id/rec_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/most_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="17dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="与本书相似的书"
                android:textColor="@color/standard_black_fourth_level_color_c6"
                android:textSize="20dp"
                android:textStyle="bold" />

            <include
                android:id="@+id/rec_layout"
                layout="@layout/four_books_horizontal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/go_city_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/btn_orange_round"
            android:gravity="center"
            android:text="@string/go_book_city"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>
