<?xml version="1.0" encoding="utf-8"?>
<com.duoyue.lib.base.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                          xmlns:app="http://schemas.android.com/apk/res-auto"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:background="@mipmap/read_menu_bg"
                                          android:orientation="vertical">
    <com.duoyue.lib.base.widget.XLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            app:x_layout_size="232,#"
    >
        <TextView
                android:id="@+id/dialog_read_more_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/color_898989"
                android:drawableLeft="@mipmap/icon_read_chapter"
                android:drawablePadding="11dp"
                app:x_text_size="28"
                app:x_layout_margin="34,52,#,30"
                android:text="@string/book_detail"/>

        <include layout="@layout/divider_1px"/>

        <TextView
                android:id="@+id/dialog_read_more_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/color_898989"
                android:drawableLeft="@mipmap/icon_read_share"
                android:drawablePadding="11dp"
                app:x_text_size="28"
                app:x_layout_padding="34,30,#,30"
                android:text="@string/share_book"/>

        <include layout="@layout/divider_1px"/>

        <TextView
                android:id="@+id/dialog_read_more_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/color_898989"
                android:drawableLeft="@mipmap/icon_waring"
                android:drawablePadding="11dp"
                app:x_text_size="28"
                app:x_layout_padding="34,30,#,30"
                android:text="@string/chapter_error"/>
    </com.duoyue.lib.base.widget.XLinearLayout>
</com.duoyue.lib.base.widget.XLinearLayout>